--- a/templates/backoffice/user/read.html.twig
+++ b/templates/backoffice/user/read.html.twig
@@ -8,7 +8,7 @@
         <h1>Utilisateur</h1>
     </div>
     <div class="container  ">
-        <a href="{{ path('app_backoffice_user_browse') }}">Retour à la liste</a>
+        <a href="{{ path('app_backoffice_user_browse') }}" class="btn btn-primary">Retour à la liste</a>
         <table class="table table-striped">
             <thead>
                 <tr>
